--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,16 @@
       <artifactId>jfiglet</artifactId>
       <version>0.0.9</version>
     </dependency>
+    <dependency>
+      <groupId>org.tinylog</groupId>
+      <artifactId>tinylog-api</artifactId>
+      <version>2.6.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.tinylog</groupId>
+      <artifactId>tinylog-impl</artifactId>
+      <version>2.6.2</version>
+    </dependency>
   </dependencies>
 
 </project>
