--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
       <artifactId>tinylog-impl</artifactId>
       <version>2.6.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.2.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
