--- a/src/main/resources/tinylog.properties
+++ b/src/main/resources/tinylog.properties
@@ -1,11 +1,7 @@
-writer1          = console
-writer1.level    = info
-writer1.format   = {date: HH:mm:ss.SSS} [{level}] {class}: {message}
-
-writer2          = rolling file
-writer2.file     = logs/myapp_{date: yyyy-MM-dd}_{count}.log
-writer2.buffered = true
-writer2.policies = startup, daily: 06:00
-writer2.format   = {class} [{thread}] {level}: {message}
+writer          = rolling file
+writer.file     = logs/myapp_{date: yyyy-MM-dd}_{count}.log
+writer.buffered = true
+writer.policies = startup, daily: 06:00
+writer.format   = {class} [{thread}] {level}: {message}
 
 writingthread    = true
